--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 * {
   font-family: "Rubik", "sans-serif";
-  color: "#393c41";
+  color: #393c41;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -9,6 +9,10 @@
 body {
   width: 100%;
   overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
 }
 
 @keyframes animateDown {
